--- a/eLunchApp/pom.xml
+++ b/eLunchApp/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>1.2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.karneim</groupId>
+            <artifactId>pojobuilder</artifactId>
+            <version>4.3.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
